--- a/Hello/src/Hello.html
+++ b/Hello/src/Hello.html
@@ -3,7 +3,7 @@
 
 <head><title>My Home Page</title></head>
 <body>
-<h1>My Name is so and so. This is my HOME.</h1>
+<h1>My Name is Kate. This is my HOME PAGE.</h1>
 </body>
 </html>
 
